[gd_scene load_steps=7 format=3 uid="uid://dcitmpg14n4dn"]

[ext_resource type="Script" uid="uid://c5uhrs1go0em" path="res://troll_video.gd" id="1_eqx4r"]
[ext_resource type="VideoStream" uid="uid://cr8cktl6swbos" path="res://Cat_laughing_at_you_then_explode_-2.ogv" id="1_t5qwu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_urx5u"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_eqx4r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:theme_override_styles/panel:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_t5qwu"]
resource_name = "new_animation"
length = 4.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:theme_override_styles/panel:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u5hh0"]
_data = {
&"RESET": SubResource("Animation_eqx4r"),
&"new_animation": SubResource("Animation_t5qwu")
}

[node name="Troll_Video" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eqx4r")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
stream = ExtResource("1_t5qwu")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = -70.0
offset_top = -27.0
offset_right = 1229.0
offset_bottom = 702.0
theme_override_styles/panel = SubResource("StyleBoxFlat_urx5u")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_u5hh0")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="finished" from="VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
